--- a/docs/stat562/hw_stat562.Rmd
+++ b/docs/stat562/hw_stat562.Rmd
@@ -410,13 +410,13 @@ Since $X_1,..,X_n$ $\underrightarrow{\mathcal{P}}$ $X$, then $\lim_{n\to\infty}P
 
  (b). In Example 5.5.8, find a subsequence of the $X_i$S that converges almost surely, that is, that converges pointwise.
 
-$X_1(s)=s+I_{[0,1]}(s)=$
+$X_1(s)=s+I_{[0,1]}(s)$,
 
-$X_2(s)=s+I_{[0,\frac12]}(s),\ X_3(s)=s+I_{[\frac12,1]}(s)$
+$X_2(s)=s+I_{[0,\frac12]}(s),\ X_3(s)=s+I_{[\frac12,1]}(s)$,
 
-$X_4(s)=s+I_{[0,\frac13]}(s),\ X_5(s)=s+I_{[\frac13,\frac23]}(s),\ X_6(s)=s+I_{[\frac23,1]}(s)$
+$X_4(s)=s+I_{[0,\frac13]}(s),\ X_5(s)=s+I_{[\frac13,\frac23]}(s),\ X_6(s)=s+I_{[\frac23,1]}(s)$,
 
-$X_7(s)=s+I_{[0,\frac14]}(s),\ X_8(s)=s+I_{[\frac14,\frac12]}(s),\ X_9(s)=s+I_{[\frac12,\frac34]}(s),\ X_10(s)=s+I_{[\frac34,1]}(s)$
+$X_7(s)=s+I_{[0,\frac14]}(s),\ X_8(s)=s+I_{[\frac14,\frac12]}(s),\ X_9(s)=s+I_{[\frac12,\frac34]}(s),\ X_10(s)=s+I_{[\frac34,1]}(s)$,...
 
 Define the subsequence $X_j(s)=s+I_{[a,b]}(s)$ such that in $I_{[a,b]}$, $a$ is always start from 0, the subsequence $X_1,X_2,X_4,X_7,..$ For this subsequence
  
