--- a/static/stat565/stat565.tex
+++ b/static/stat565/stat565.tex
@@ -176,7 +176,7 @@ $\bar y_{..}=\frac{1}N\left[y_{..}=\sum^a_{i=1}(y_{i.}=\sum^n_{j=1}y_{ij})\right
 
 \begin{tabular}{l|l|l|l|l}
      &$y_{ij}$  &$\bar y_{..}$&$\bar y_{i.}$&$\bar y_{.j}$\\
-     &          &$\frac{\sum^a_{i=1}\sum^n_{j=1}y_{ij}}N$ & $\frac{\sum^n_{j=1}y_{ij}}n$ & $\frac(\sum^a_{i=1}y_{ij})a$\\
+     &          &$\frac{\sum^a_{i=1}\sum^n_{j=1}y_{ij}}N$ & $\frac{\sum^n_{j=1}y_{ij}}n$ & $\frac{\sum^a_{i=1}y_{ij}}a$\\
 E[f.]  &  $\mu$   &  $\mu$      & $\mu+\tau_i$ &$\mu+\beta_j$\\
 V[f.]  &$\sigma^2$&$\frac{\sigma^2}{na}$&$\frac{\sigma^2}{n}$&$\frac{\sigma^2}{a}$\\\hline
 E[r.]  &  $\mu$   &  $\mu$      &$\mu$ & $\mu$  \\
@@ -191,12 +191,10 @@ $\frac1{an}y_{..}-\frac1{a}\sum_{i=1}^a\hat\tau_i$& & $\frac1{a}y_{i.}-\hat\mu$\
 \hline
 \end{tabular}
 
-\begin{tabular}{l|l|l}
-     &E[f.]&E[r.]\\
-$MS_{Trt}$ & $\sigma^2+\frac{n}{a-1}\sum_{i=1}^a\tau_i^2$&$\sigma^2+n\tau_i^2$\\
-$MS_{Trt}$ & $\sigma^2+\frac{b}{a-1}\sum_{i=1}^a\tau_i^2$&\\
-$MS_{Blk}$ &$\sigma^2+\frac{a}{b-1}\sum_{j=1}^b\beta_j^2$&$\sigma^2+a\beta_j^2$\\
-$MS_{E}$   &$\sigma^2$&$\sigma^2$\\
+\begin{tabular}{l|l|l|l|l}
+     &$MS_{E}$  & $MS_{Trt}$ & $MS_{Trt}$ & $MS_{Blk}$ \\
+E[f.]&$\sigma^2$& $\sigma^2+\frac{n}{a-1}\sum_{i=1}^a\tau_i^2$& $\sigma^2+\frac{b}{a-1}\sum_{i=1}^a\tau_i^2$&$\sigma^2+\frac{a}{b-1}\sum_{j=1}^b\beta_j^2$\\
+E[r.]&$\sigma^2$& $\sigma^2+n\tau_i^2$& & $\sigma^2+a\beta_j^2$\\
 \hline
 \end{tabular}
 
