--- a/static/stat565/stat565.tex
+++ b/static/stat565/stat565.tex
@@ -181,13 +181,6 @@ V[r.]  &$\sigma^2+\sigma_\tau^2$&$\frac{\sigma_\tau^2}{a}+\frac{\sigma^2}{na}$&$
 \hline
 \end{tabular}
 
-\begin{tabular}{l|l|l|l|l|l}
-$\hat\mu$&$\hat\mu_i$&$\hat\tau_i$&$\hat\beta_j$&$\hat y_{ij}$&$\varepsilon_{ij}$\\
-$\bar y_{..}$&$\bar y_{i.}$&$\bar y_{i.}-\bar y_{..}$&$\bar y_{.j}-\bar y_{..}$&$\bar y_{i.}+\bar y_{.j}-\bar y_{..}$&$\bar y_{ij}-\bar y_{..}$\\
-$\frac1{an}y_{..}-\frac1{a}\sum_{i=1}^a\hat\tau_i$& & $\frac1{a}y_{i.}-\hat\mu$\\
-\hline
-\end{tabular}
-
 \begin{tabular}{l|l|l|l|l}
      &$MS_{E}$  & $MS_{Trt}$ & $MS_{Trt}$ & $MS_{Blk}$ \\
 E[f.]&$\sigma^2$& $\sigma^2+\frac{n}{a-1}\sum_{i=1}^a\tau_i^2$& $\sigma^2+\frac{b}{a-1}\sum_{i=1}^a\tau_i^2$&$\sigma^2+\frac{a}{b-1}\sum_{j=1}^b\beta_j^2$\\
@@ -196,11 +189,17 @@ E[r.]&$\sigma^2$& $\sigma^2+n\tau_i^2$& & $\sigma^2+a\beta_j^2$\\
 \end{tabular}
 
 \begin{tabular}{l|l|l|l|l|l}
-&$\hat\sigma^2$&$\hat\sigma_{Trt}^2$&$\hat\sigma_{Blk}^2$&$\widehat{Var(\bar y_{i.})}$&$\hat{X}$\\
-f.&$MSE$& & &$\frac{MS_{E}}{n}$&\\
-r.&$MSE$&$\frac{MS_{Trt}-MS_{E}}{n}$&$\frac{MS_{Blk}-MS_{E}}{a}$&$\frac{MS_{Trt}}{n}$&$\frac{ay'_{i.}+by'_{.j}-y_{..}'}{(a-1)(b-1)}$\\
+&$\hat\sigma^2$&$\hat\sigma_{Trt}^2$&$\hat\sigma_{Blk}^2$&$\widehat{Var(\bar y_{i.})}$&$\widehat{Var(\bar y_{.j})}$\\
+f.&$MSE$& & &$\frac{MS_{E}}{n}$& $\frac{MS_{E}}{a}$\\
+r.&$MSE$&$\frac{MS_{Trt}-MS_{E}}{n}$&$\frac{MS_{Blk}-MS_{E}}{a}$&$\frac{MS_{Trt}}{n}$&$\frac{MS_{Trt}}{a}$\\
 \end{tabular}
 
+\begin{tabular}{l|l|l|l|l|l}
+$\hat\mu$&$\hat\mu_i$&$\hat\tau_i$&$\hat\beta_j$&$\hat y_{ij}$&$\hat\varepsilon_{ij}$\\
+$\bar y_{..}$&$\bar y_{i.}$&$\bar y_{i.}-\bar y_{..}$&$\bar y_{.j}-\bar y_{..}$&$\bar y_{i.}+\bar y_{.j}-\bar y_{..}$&$\bar y_{ij}-\bar y_{..}$\\
+$\frac1{an}y_{..}-\frac1{a}\sum_{i=1}^a\hat\tau_i$& & $\frac1{a}y_{i.}-\hat\mu$\\
+\hline
+\end{tabular}
 
 \begin{tabular}{l|l|l|l|l|l}
 FT- &CRD & E & Var[]\\
