--- a/static/stat562/Stat562.tex
+++ b/static/stat562/Stat562.tex
@@ -119,7 +119,7 @@
 
 \raggedright
 \footnotesize
-\begin{multicols}{3}
+\begin{multicols}{1}
 
 
 % multicol parameters
@@ -131,11 +131,30 @@
 \setlength{\columnsep}{2pt}
 
 
+
+
+\subsection{2 Transformation of pairs of r.v.s}
+
+Given 2 random variables and their joint function, and given a function of them, find its distribution.
+
+
+$f_{Y_1,Y_2}(y_1,y_2)=\sum_{i=1}^kf_{X_1,X_2}(h_1(y_1,y_2), h_2(y_1,y_2))|J_i|$
+
+$J_{1,2}=\begin{vmatrix}\frac{\partial h_1}{\partial y_1} & \frac{\partial h_2}{\partial y_2} \\ \frac{\partial h_1}{\partial y_1} & \frac{\partial h_2}{\partial y_2} \end{vmatrix}=\frac{\partial h_1}{\partial y_1}\frac{\partial h_2}{\partial y_2}-\frac{\partial h_2}{\partial y_1}\frac{\partial h_1}{\partial y_2}$
+
+
+
 $U\sim Geom(p=\frac12),u=1,2..$ the number of trials needed to get the first head.
 
 $V\sim N Bin(p=\frac12,r=2),v=2,3..$ the number of trials needed to get two heads in repeated tosses of a fair coin.
 
 the distribution of (U,V) is $\{(u,v):u=1,2,..;v=u+1,u+2,..\}$ is not a cross-product set. U and V are not independent.
+
+
+\subsection{3 Covariance and Correlation}
+
+
+Given a joint pdf, find the covariance, correlation, conditional expectation,conditional variance.
 
 \subsection{Conditional expectations and variances}
 
@@ -153,17 +172,11 @@ $f(x_2|x_1)=\frac{f(x_1,x_2)}{f_1(x_1)}$;$p(x_2|x_1)=\frac{p(x_1,x_2)}{p_1(x_1)}
 
 $F_{XY}(x,y)=P(X\le x,Y\le y)$
 
-\subsection{Covariance and Correlation}
-
-
-
-\subsection{Transformation of pairs of r.v.s}
-
-$f_{Y_1,Y_2}(y_1,y_2)=\sum_{i=1}^kf_{X_1,X_2}(h_1(y_1,y_2), h_2(y_1,y_2))|J_i|$
-
-$J_{1,2}=\begin{vmatrix}\frac{\partial h_1}{\partial y_1} & \frac{\partial h_2}{\partial y_2} \\ \frac{\partial h_1}{\partial y_1} & \frac{\partial h_2}{\partial y_2} \end{vmatrix}=\frac{\partial h_1}{\partial y_1}\frac{\partial h_2}{\partial y_2}-\frac{\partial h_2}{\partial y_1}\frac{\partial h_1}{\partial y_2}$
 
 \subsection{Properties of $\bar X$ and $S^2$}
+
+5.2
+
 $\bar X_{n+1}=\frac{\sum_{i=1}^{n+1}X_{i}}{n+1}=\frac{\sum_{i=1}^{n}X_{i}+X_{n+1}}{n+1}=\frac{n\bar X_{n}+X_{n+1}}{n+1}$
 
 $nS^2_{n+1}=(n-1)S_n^2+(\frac{n}{n+1})(X_{n+1}-\bar X_n)^2$
@@ -173,7 +186,11 @@ when $X_1,..,X_n$ be iid $n(\mu,\sigma^2)$, $\frac{(n-1)S^2}{\sigma^2}\sim\chi^2
 $Var[\frac{(n-1)S^2}{\sigma^2}]=\frac{(n-1)^2}{\sigma^4}Var[S^2]=2(n-1)\implies Var[S^2]=\frac{2\sigma^4}{n-1}$
 
 
-\subsection{Connection between $N,\chi^2,t,F$}
+\subsection{1 Connection between $N,\chi^2,t,F$}
+
+5.3
+
+$X_1..X_n\sim iid N(\mu,\sigma^2)$. Given some function of these, find the distribution.
 
 \begin{tabular}{l|lll}
 W  Normal& $\bar X\sim N(\mu,\frac{\sigma^2}n)$ & $\bar X,S^2$ indep & $\frac{(n-1)S^2}{\sigma^2}\sim\chi^2_{n-1}$\\
@@ -191,13 +208,26 @@ $\chi^2_{p}\sim gamma(p/2,2)$
 
 5.3.5  $X_1..X_n$,$Y_1..Y_m$ indep. $X_i\sim n(\mu_X,\sigma_X^2)$，$Y_j\sim n(\mu_Y,\sigma_Y^2)$,$\frac{S_X^2}{\sigma_X^2}\sim \chi^2$F: $\frac{S_X^2/\sigma_X^2}{S_Y^2/\sigma_Y^2}$
 
-\subsection{Order statistics}
+
+\subsection{4 Order statistics}
+
+Find the distribution of X(k) or find the joint distribution of $X_{(j)},X_{(k)}$
+
+1-29p9
+
+5.4.4 $f_{K}(x)=\frac{n!}{(j-1)!(n-j)!}K[F_X(x)]^{k-1}[1-F_X(x)]^{n-k}f(x)$
+
+1-31p4-8
+
+5.4.5 uniform order pdf
+
+1-31p2-3
 
 5.4.6 $f_{X_{(i)},X_{(j)}}(u,v)=\frac{n!}{(i-1)!(j-1-i)!(n-j)!}f_X(u)f_X(v)[F_X(u)]^{i-1}[F_X(v)-F_X(u)]^{j-1-i}[1-F_X(v)]^{n-j}$
 
 $f_{X_{(1)},..,X_{(n)}}(x_1,..,x_n)=\begin{cases}n!f_X(x_1)\cdot...\cdot f_X(x_n) &-\infty<x_1<..<x_n<\infty\\0&\text{otherwise}\end{cases}$
 
-
+joint pmf
 
 
 Conditional/Baye's: $P(A|B) = \frac{P(A\cap B)}{P(B)}=\frac{P(B|A)P(A)}{P(B)}$;disjoint
