--- a/static/stat562/note_stat562.Rmd
+++ b/static/stat562/note_stat562.Rmd
@@ -474,6 +474,14 @@ In Example 5.2. 10, we found that if $Z_1,..,Z_n$ is a random sample from a $Cau
 
 ### 5.4 Order Statistics
 
+**Theorem 5.4.4**
+
+`2019.01.29``p.9`
+
+$$f_{X_{(j)}}(x)=\frac{n!}{(j-1)!(n-j)!}f_X(x)[F_X(x)]^{j-1}[1-F_X(x)]^{n-j}$$
+
+$$f_{K}(x)=\frac{n!}{(j-1)!(n-j)!}K[F_X(x)]^{k-1}[1-F_X(x)]^{n-k}f(x)$$
+
 ### 5.5 Convergence Concepts
 
 #### 5.5.1 Convergence in Probability
