--- a/static/stat565/stat565.tex
+++ b/static/stat565/stat565.tex
@@ -153,7 +153,7 @@ df& $(Trt,E)$&$(Blk,E)$&$(C=1,E)$\\
 
 $\Gamma=\sum_{i=1}^ac_i\mu_i$,$C=\sum_{i=1}^ac_i\bar y_i$;$\sum_{i=1}^ac_i=0$;Orthogonal $\sum_{i=1}^ac_id_i=0$
 
-$SS_C=\frac{(\sum_{i=1}^ac_i\bar y_i)^2}{\frac{1}n\sum_{i=1}^ac_i^2}$,$\sum SS_C=SS_{Trt}$
+$SS_C=\frac{(\sum_{i=1}^ac_i\bar y_i)^2}{\frac{1}n\sum_{i=1}^ac_i^2}$,$\sum_1^{a-1} SS_C=SS_{Trt}$
 
 \subsubsection{CI}
 \begin{tabular}{l|l|l}
@@ -184,7 +184,7 @@ V[r.]  &$\sigma^2+\sigma_\tau^2$&$\frac{\sigma_\tau^2}{a}+\frac{\sigma^2}{na}$&$
 \begin{tabular}{l|l|l|l|l}
      &$MS_{E}$  & $MS_{Trt}$ & $MS_{Trt}$ & $MS_{Blk}$ \\
 E[f.]&$\sigma^2$& $\sigma^2+\frac{n}{a-1}\sum_{i=1}^a\tau_i^2$& $\sigma^2+\frac{b}{a-1}\sum_{i=1}^a\tau_i^2$&$\sigma^2+\frac{a}{b-1}\sum_{j=1}^b\beta_j^2$\\
-E[r.]&$\sigma^2$& $\sigma^2+n\tau_i^2$& & $\sigma^2+a\beta_j^2$\\
+E[r.]&$\sigma^2$& $\sigma^2+n\tau_i^2$& $\sigma^2+b\tau_i^2$ & $\sigma^2+a\beta_j^2$\\
 \hline
 \end{tabular}
 
