--- a/docs/stat561/note_stat561.Rmd
+++ b/docs/stat561/note_stat561.Rmd
@@ -1182,6 +1182,8 @@ every $A\subset\mathbf{R^2}$,
 
 $$P((X,Y)\in A)=\iint_A f(x,y)dxdy$$.
 
+$$f_X(x)=\int_{-\infty}^{\infty}f(x,y)dy, -\infty<x<\infty\quad f_Y(y)=\int_{-\infty}^{\infty}f(x,y)dx, -\infty<x<\infty$$
+
 `p. 6`
 Example: $f(x_1,x_2)=8x_1x_2, \quad 0<x_1<x_2<1$
 
