--- a/docs/stat565/stat565.tex
+++ b/docs/stat565/stat565.tex
@@ -153,7 +153,7 @@ df& $(Trt,E)$&$(Blk,E)$&$(C=1,E)$\\
 
 $\Gamma=\sum_{i=1}^ac_i\mu_i$,$C=\sum_{i=1}^ac_i\bar y_i$;$\sum_{i=1}^ac_i=0$;Orthogonal $\sum_{i=1}^ac_id_i=0$
 
-$SS_C=\frac{(\sum_{i=1}^ac_i\bar y_i)^2}{\frac{1}n\sum_{i=1}^ac_i^2}$,$\sum SS_C=SS_{Trt}$
+$SS_C=\frac{(\sum_{i=1}^ac_i\bar y_i)^2}{\frac{1}n\sum_{i=1}^ac_i^2}$,$\sum_1^{a-1} SS_C=SS_{Trt}$
 
 \subsubsection{CI}
 \begin{tabular}{l|l|l}
