--- a/static/usp537/hw_usp537.Rmd
+++ b/static/usp537/hw_usp537.Rmd
@@ -220,22 +220,33 @@ So, for example, we know that the total number of people riding the rail system 
 
   a. Using the data provided in Table 1, estimate the fare elasticity of total weekday demand for MBTA rail transit service during midday (10am¬3pm).
 
-Elasticity = %∆Demand/ % ∆Fare = [(32290-22850)/22850]/[(0.10 – 0.25)/0.25] = -0.6885
-
-The fare elasticity of demand for midday rail transit service was about -0.6885. 
+$$\text{Elasticity }\eta=\frac{\Delta Q/Q}{\Delta P/P}=\frac{\frac{32290-22850}{22850}}{\frac{0.1-0.25}{0.25}}=-0.6885485$$
 
 
+```{r}
+((32290-22850)/22850)/((0.1-0.25)/0.25)
+((15020-9500)/9500)/((0.1-0.25)/0.25)
+((10860-8250)/8250)/((0.1-0.25)/0.25)
+((6410-5100)/5100)/((0.1-0.25)/0.25)
+
+```
+
+The fare elasticity of total weekday demand for MBTA rail transit service during midday (10am¬3pm) is -0.6885485. 
+
+ ---
+ 
   b. According to this elasticity estimate, is the demand for midday rail transit service elastic or inelastic? Comment on your answer.
 
-Because |-0.6885| <- 1, the demand for midday rail transit service is inelastic. The value, -0.6885, means that a 1% decrease in fare would result in a 0.6885% increase in ridership. Because demand is inelastic, it indicates that the quantity demanded is not very sensitive to price changes.
+For $-0.6885485\in(-1,1)$, the demand for midday rail transit service is inelastic. The result shows that the ridershipeach will decrease 0.6885% when fare has 1% increase, which indicates that the consumers are not sensitive with fare change.
 
   c. How does the elasticity of demand for midday rail transit service vary among the three income groups (low, moderate, and high) for whichridership data are reported inTable 1? Comment onthese variations.
 
-Elasticitylow = %∆Demand/ % ∆Fare = ((15020-9500)/9500)/((0.10-0.25)/0.25) = -0.9684
+$$\eta_{Low}=\frac{\Delta Q/Q}{\Delta P/P}=\frac{\frac{15020-9500}{9500}}{\frac{0.1-0.25}{0.25}}=-0.9684211$$
 
-Elasticitymid = %∆Demand/ % ∆Fare = ((10860-8250)/8250)/((0.10-0.25)/0.25) = -0.5272
+$$\eta_{Mid}=\frac{\Delta Q/Q}{\Delta P/P}=\frac{\frac{10860-8250}{8250}}{\frac{0.1-0.25}{0.25}}=-0.5272727$$
 
-Elasticityhigh = %∆Demand/ % ∆Fare = ((6410-5100)/5100)/((0.10-0.25)/0.25) = -0.4281
+$$\eta_{Mid}=\frac{\Delta Q/Q}{\Delta P/P}=\frac{\frac{6410-5100}{5100}}{\frac{0.1-0.25}{0.25}}=-0.4281046$$
+
 
 Results indicates that the fare elasticity of demand for midday rail transit service varies among income groups. Low income group has highest fare elasticity. The fare elasticity of moderate and high income groups are similar, --0.5272 and -0.4281 respectively.  If there is 1% decrease in fare, there will be 0.9684 ridership increase for low income group, 0.5272 ridership increase for moderate income group and 0.4281 increase for high income group.  Low income group is most sensitive to the fare change. 
 
