562 sheet Feb 11 2nd

--- a/docs/stat562/Stat562.tex
+++ b/docs/stat562/Stat562.tex
@@ -149,16 +149,16 @@ $U\sim Geom(p=\frac12),u=1,2..$ $V\sim N Bin(p=\frac12,r=2),v=2,3..$ (U,V) $\{(u
 
 $E[X]=\int_{-\infty}^{\infty}xf(x)dx=E[E(X|Y)]$ 4.4.3
 $E[g(x)]=\sum_{x\in D}h(x)p(x)=\int_{-\infty}^{\infty}g(x)f(x)dx$
-$E[g(X,Y)]=\int_{-\infty}^{\infty}\int_{-\infty}^{\infty} g(x,y)f(x,y)dxdy$ 4.1.10 \\
+$E[g(X,Y)]=\int_{-\infty}^{\infty}\int_{-\infty}^{\infty} g(x,y)f(x,y)dxdy$ 4.1.10\\
+$E[XY]=E[X]E[Y]$ $E[g(X)h(Y)]=E[g(x)]E[h(y)]$ $P(X\le x,Y\le y)=P(X\le x)P(Y\le y)$ 4.2.10\\
 $E[g(X)|y]=\sum_xg(x)f(x|y)=\int_{-\infty}^{\infty}g(x)f(x|y)dx$ 4.2.3 \\
-$E[XY]=E[X]E[Y]$ $E[g(X)h(Y)]=E[g(x)]E[h(y)]$ $P(X\le x,Y\le y)=P(X\le x)P(Y\le y)$ 4.2.10 
 
+$E[(X-\mu)^n]=\mu_n=\sum{(x-\mu)^n}p(x)=\int{(x-\mu)^n}f(x)dx$ | $E(aX+b)=aE(X)+b$
 $E[g_1(X_1)\cdots g_n(X_n))=(E(g_1(X_1)]\cdots(E(g_n(X_n))$ $X_1,.., X_n$ indep 4.6.6
-
 $E[g(\vec X)]=\sum\cdots\sum_{all\vec x} g(\vec x)p(\vec x)=\idotsint_{\mathbf{R^n}}g(\vec x)f(\vec x)d\vec x$
 $E[\sum_{i=1}^ng(X_i)]=nE(g(X_1))$ 5.2.5 
 
-$E[(X-\mu)^n]=\mu_n=\sum{(x-\mu)^n}p(x)=\int{(x-\mu)^n}f(x)dx$ | $E(aX+b)=aE(X)+b$
+
 
 \textbf{Variances}
 
@@ -166,9 +166,9 @@ $V[X]=\sigma_{x}^2=E(X^2)-[E(X)]^2=E[V(X|Y)]+V[E(X|Y)]$ 4.4.7
 
 $V[X|Y]=E[(X-E[X|Y])^2|Y]=E[X^2|y]-(E[X|y])^2$ 4.2.4
 
-$Var(aX\pm bY)=a^2VarX+b^2VarY\pm 2abCov(X,Y)$ 4.5.6 $V[aX+b]=a^2\sigma^2$ $\sigma_{ax+b} =|a|\sigma_{x}$
+$V[aX\pm bY]=a^2VX+b^2VY\pm 2abCov(X,Y)$ 4.5.6 $V[aX+b]=a^2\sigma^2$ $\sigma_{ax+b} =|a|\sigma_{x}$
 
-Indep $V(X\pm Y)=VX+VY$ 4.5.6 $V[\sum_{i=1}^ng(X_i)]=nVar(g(X_1))$ 5.25
+$V[X\pm Y]=VX+VY$ Indep 4.5.6 $V[\sum_{i=1}^ng(X_i)]=nVar(g(X_1))$ 5.25
 
 \subsubsection{4.5 Covariance and Correlation}
 
@@ -180,56 +180,45 @@ $\rho_{XY}=\frac{\sigma_{XY}}{\sigma_X\sigma_Y}$ $Corr(X,Y)=\frac{Cov(X,Y)}{\sqr
 
 \subsubsection{4.3 Transform}
 
-$f_{Y_1,Y_2}(y_1,y_2)=f_{X_1,X_2}(h_1(y_1,y_2), h_2(y_1,y_2))|J|$ 4.3.2 
+$f_{U,V}(u,v)=f_{X,Y}(h_1(u,v),h_2(u,v))|J|$ 4.3.2 $=\sum_{i=1}^kf_{X,Y}(h_{1i}(u,v),\ h_{2i}(u,v))|J_i|$ 4.3.5 
 
-$J_{1,2}=\begin{vmatrix}\frac{\partial h_1}{\partial y_1} & \frac{\partial h_2}{\partial y_2} \\ \frac{\partial h_1}{\partial y_1} & \frac{\partial h_2}{\partial y_2} \end{vmatrix}=\frac{\partial h_1}{\partial y_1}\frac{\partial h_2}{\partial y_2}-\frac{\partial h_2}{\partial y_1}\frac{\partial h_1}{\partial y_2}$
-
-$f_{U,V}(u,v)=\sum_{i=1}^kf_{X,Y}(h_{1i}(u,v),\ h_{2i}(u,v))|J_i|$ 4.3.5 
+$\begin{vmatrix}x=h_1(u,v) & u=g_1(x,y) \\ y=h_2(u,v) & v=g_2(x,y) \end{vmatrix}$ $J=\begin{vmatrix}\frac{\partial x}{\partial u} & \frac{\partial y}{\partial v} \\ \frac{\partial x}{\partial u} & \frac{\partial y}{\partial v} \end{vmatrix}=\frac{\partial x}{\partial u}\frac{\partial y}{\partial v}-\frac{\partial y}{\partial u}\frac{\partial x}{\partial v}$
 
 $f_Z(z) =\int_{-\infty}^{\infty}f_X(w)f_Y(z-w)dw$  $Z=X+Y$ 5.2.9 Convolution
 
 \subsection{Distribution}
 
-4.2.14 | indep $X\sim n(\mu,\sigma^2)$, $Y\sim n(\gamma,\tau^2)$ | $X+Y\sim n(\mu+\gamma,\sigma^2+\tau^2)$
+$X\sim n(\mu,\sigma^2)$, $Y\sim n(\gamma,\tau^2)$ | $X+Y\sim n(\mu+\gamma,\sigma^2+\tau^2)$indep  4.2.14 
+$X\sim Poisson(\theta)$, $Y\sim Poisson(\lambda)$ | $X+Y\sim Poisson(\theta+\lambda)$ indep 4.3.2 \\
+$X\sim Beta(\alpha,\beta)$, $Y\sim Beta(\alpha+\beta,\gamma)$ | $XY\sim n(\alpha,\beta+\gamma)$ indep 4.3.3\\
+$X, Y\sim n(0,1)$ | $X+Y, X-Y\sim n(0,2)$, $X/Y\sim cauchy(0,1)$ indep 4.3.4/6 \\
+$X|Y\sim Bin(Y,p), Y|\Lambda\sim Pois(\Lambda), \Lambda\sim Expo(\beta)$ or $X|Y\sim Bin(Y,p), Y\sim NBin(p=\frac1{1+\beta},r=1)$ 4.4.5
+$Y|\Lambda\sim Pois(\Lambda), \Lambda\sim Gamma(\alpha,\beta)$ then $Y\sim NBin(\alpha,\frac1{1+p\beta})$ Pois-Gamma
+$X|P\sim Bin(n,P), P\sim Gamma(\alpha,\beta)$ $EX=E[E(X|P)]=E[nP]=n\frac{\alpha}{\alpha+\beta}$ Beta-Bin 4.4.6
+$V[X]=V[E(X|P)]+E[V(X|P)]=\frac{n^2\alpha\beta}{(\alpha+\beta)^2(\alpha+\beta+1)}+\frac{n\alpha\beta}{(\alpha+\beta)(\alpha+\beta+1)}=n\frac{\alpha\beta(\alpha+\beta+n)}{(\alpha+\beta)^2(\alpha+\beta+1)}$ Beta-Bin 4.4.8 
 
-4.3.2 | indep $X\sim Poisson(\theta)$, $Y\sim Poisson(\lambda)$ | $X+Y\sim Poisson(\theta+\lambda)$\\
-4.3.3 | indep $X\sim Beta(\alpha,\beta)$, $Y\sim Beta(\alpha+\beta,\gamma)$ | $XY\sim n(\alpha,\beta+\gamma)$\\
-4.3.4/6|indep $X, Y\sim n(0,1)$ | $X+Y, X-Y\sim n(0,2)$, $X/Y\sim cauchy(0,1)$\\
-
-4.4.5 $X|Y\sim Bin(Y,p), Y|\Lambda\sim Pois(\Lambda), \Lambda\sim Expo(\beta)$ or $X|Y\sim Bin(Y,p), Y\sim NBin(p=\frac1{1+\beta},r=1)$
-
-Pois-Gamma: $Y|\Lambda\sim Pois(\Lambda), \Lambda\sim Gamma(\alpha,\beta)$ then $Y\sim NBin(\alpha,\frac1{1+p\beta})$
-
-4.4.6 Beta-Bin $X|P\sim Bin(n,P), P\sim Gamma(\alpha,\beta)$ $EX=E[E(X|P)]=E[nP]=n\frac{\alpha}{\alpha+\beta}$
-
-4.4.8 Beta-Bin $V[X]=V[E(X|P)]+E[V(X|P)]=\frac{n^2\alpha\beta}{(\alpha+\beta)^2(\alpha+\beta+1)}+\frac{n\alpha\beta}{(\alpha+\beta)(\alpha+\beta+1)}=n\frac{\alpha\beta(\alpha+\beta+n)}{(\alpha+\beta)^2(\alpha+\beta+1)}$
-
-4.5.10 bivarialte normal pdf with $\mu_X,\mu_Y,\sigma_X^2,\sigma_Y^2, \rho$ $f_X(x)\sim n(\mu_X,\sigma^2_X)$ $f_Y(y)\sim n(\mu_Y,\sigma^2_Y)$
+$f_X(x)\sim n(\mu_X,\sigma^2_X)$ $f_Y(y)\sim n(\mu_Y,\sigma^2_Y)$ $\rho_{XY}=\rho$ bivarialte normal 4.5.10
 $f_{Y|X}(y|x) \sim n\left(\mu_Y+\rho\frac{\sigma_Y}{\sigma_X}(x-\mu_X),\sigma_Y^2(1-\rho^2)\right)$
 $aX+bY\sim n(a\mu_X+b\mu_Y,a^2\mu_X^2+b^2\mu_Y^2+2ab\rho\sigma_X\sigma_Y$
 
-4.6.8 | indep $X_1,.., X_n\sim gamma(\alpha,\beta)$ | $X_1+..+X_n\sim Gamma(\alpha_1+..+\alpha_n,\beta)$\\
-
-5.2.8 | $X_1,..,X_n\sim N(\mu,\sigma^2)$ | $\bar X\sim N(\mu,\sigma^2/n)$\\
-indep | $X_1,..,X_n\sim gamma(\alpha,\beta)$ | $\bar X\sim gamma(n\alpha,\beta/n)$\\
-5.2.10| $X\sim cauchy(0,\sigma), Y\sim cauchy(0,\tau)$ | $X+Y\sim cauchy(0,\sigma+\tau)$\\
-indep | $X_1,..,X_n\sim cauchy(0,\sigma)$ | $\bar X\sim cauchy(0,\sigma),\sum_{1}^{n} X\sim cauchy(0,n\sigma)$
+$X_1,..,X_n\sim gamma(\alpha,\beta)$ | $X_1+..+X_n\sim Gamma(\alpha_1+..+\alpha_n,\beta)$ $\bar X\sim gamma(n\alpha,\beta/n)$ indep 4.6.8\\
+$X\sim cauchy(0,\sigma), Y\sim cauchy(0,\tau)$ | $X+Y\sim cauchy(0,\sigma+\tau)$ 5.2.10\\
+$X_1,..,X_n\sim cauchy(0,\sigma)$ | $\bar X\sim cauchy(0,\sigma),\sum_{1}^{n} X\sim cauchy(0,n\sigma)$
 
 \subsection{5.3 Sampling from N}
 $\bar X=\frac{X_1+..+X_n}{n}=\frac1n\sum_{i=1}^nX_i$ 5.2.2 $\bar X_{n+1}=\frac{\sum_{i=1}^{n+1}X_{i}}{n+1}=\frac{\sum_{i=1}^{n}X_{i}+X_{n+1}}{n+1}=\frac{n\bar X_{n}+X_{n+1}}{n+1}$ 5.3.1
-$S^2=\frac1{n-1}\sum_{i=1}^n(X_i-\bar X)^2=\frac1{n-1}\sum_{i=1}^n(X_i^2-n\bar X^2)$ 5.2.3 $nS^2_{n+1}=(n-1)S_n^2+(\frac{n}{n+1})(X_{n+1}-\bar X_n)^2$ 5.3.1
-
+$S^2=\frac1{n-1}\sum_{i=1}^n(X_i-\bar X)^2=\frac1{n-1}\sum_{i=1}^n(X_i^2-n\bar X^2)$ 5.2.3 $nS^2_{n+1}=(n-1)S_n^2+(\frac{n}{n+1})(X_{n+1}-\bar X_n)^2$
 
 \begin{tabular}{l|l|l|l|l|l}
 5.2.6 & $X_1,..,X_n$ iid  & $E[\bar X]=\mu$ & $E[S^2]=\sigma^2$ & $V[\bar X]=\frac{\sigma^2}n)$ & W/o Normal\\\hline
-5.3.1 & $n(\mu,\sigma^2)$ & $\bar X,S^2$ indep & $\bar X\sim N(\mu,\frac{\sigma^2}n)$ & $\frac{(n-1)S^2}{\sigma^2}\sim\chi^2_{n-1}$ & W  Normal\\
+5.3.1 & $\sim n(\mu,\sigma^2)$ & $\bar X,S^2$ indep & $\bar X\sim N(\mu,\frac{\sigma^2}n)$ & $\frac{(n-1)S^2}{\sigma^2}\sim\chi^2_{n-1}$ & W  Normal\\
 \end{tabular}
 
-$Z\sim n(0,1)$, $Z^2\sim \chi^2_1$ 5.3.2a $X_1,..,X_n\sim \chi^2_{p_i}$, $X_1+..+X_n\sim \chi^2_{p_1+..p_n}$ 5.3.2b $\chi^2_{p}\sim gamma(\frac{p}2,2)$ 4.6.8
+$Z\sim n(0,1)$, $Z^2\sim \chi^2_1$ 5.3.2a  $X_1,..X_n\sim \chi^2_{p_i}$, $X_1+..X_n\sim \chi^2_{p_1+..p_n}$ 5.3.2b  $\chi^2_{p}\sim gamma(\frac{p}2,2)$ 4.6.8
 
-$X_1,..X_n\sim n(\mu,\sigma^2)$ | $\frac{\bar X-\mu}{{\sigma}/\sqrt{n}}\sim t_{n-1}$ 5.3.4 | $t_1=Cauchy(0,1)$
+$X_1,..X_n\sim n(\mu,\sigma^2)$, $\frac{\bar X-\mu}{{\sigma}/\sqrt{n}}\sim t_{n-1}$ 5.3.4 | $t_1=Cauchy(0,1)$
 
-$X_1..X_n$,$Y_1..Y_m$ indep. $X_i\sim n(\mu_X,\sigma_X^2)$，$Y_j\sim n(\mu_Y,\sigma_Y^2)$,$\frac{S_X^2}{\sigma_X^2}\sim \chi^2$ $\frac{S_X^2/\sigma_X^2}{S_Y^2/\sigma_Y^2} \sim F $5.3.5
+$X_1..X_n$,$Y_1..Y_m$ indep. $X_i\sim n(\mu_X,\sigma_X^2)$，$Y_j\sim n(\mu_Y,\sigma_Y^2)$,$\frac{S_X^2}{\sigma_X^2}\sim \chi^2$ | $\frac{S_X^2/\sigma_X^2}{S_Y^2/\sigma_Y^2} \sim F $5.3.5
 
 $X\sim F_{p,q}$, $\frac{1}X \sim F_{q,p}$ |$X\sim T_q$, $X^2 \sim F_{1,q}$ | $X\sim F_{p,q}$, $\frac{\frac{p}{q}X}{1+\frac{p}{q}X} \sim Beta(\frac{p}2,\frac{q}2)$
 
